pp2/y.output
Terminals unused in grammar

   '|'
   '&'
   '^'


Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: DeclList Decl
    3         | Decl

    4 Decl: VarDecl
    5     | FnDecl
    6     | ClassDecl
    7     | InterDecl

    8 ClassDecl: T_Class T_Identifier CExtend CImplement '{' Field '}'
    9          | T_Class T_Identifier CExtend CImplement '{' '}'

   10 CExtend: T_Extends T_Identifier
   11        | /* empty */

   12 CImplement: T_Implements Implements
   13           | /* empty */

   14 Implements: Implements ',' T_Identifier
   15           | T_Identifier

   16 Field: Field VarDecl
   17      | Field FnDecl
   18      | VarDecl
   19      | FnDecl

   20 InterDecl: T_Interface T_Identifier '{' Prototypes '}'
   21          | T_Interface T_Identifier '{' '}'

   22 VarDecl: Var ';'

   23 Var: Type T_Identifier

   24 Type: T_Int
   25     | T_Double
   26     | T_Bool
   27     | T_String
   28     | T_Identifier
   29     | Type T_Dims

   30 FnDecl: Type T_Identifier '(' Formals ')' StmtBlock
   31       | T_Void T_Identifier '(' Formals ')' StmtBlock

   32 Prototypes: Prototypes Prototype
   33           | Prototype

   34 Prototype: Type T_Identifier '(' Formals ')' ';'
   35          | T_Void T_Identifier '(' Formals ')' ';'

   36 Formals: Vars
   37        | /* empty */

   38 Vars: Vars ',' Var
   39     | Var

   40 StmtBlock: '{' VarDecls Stmts '}'
   41          | '{' VarDecls '}'
   42          | '{' Stmts '}'
   43          | '{' '}'

   44 VarDecls: VarDecls VarDecl
   45         | VarDecl

   46 Stmts: Stmts Stmt
   47      | Stmt

   48 Stmt: OutExpr ';'
   49     | StmtBlock
   50     | T_Break ';'
   51     | T_Return ';'
   52     | T_Return Expr ';'
   53     | T_Print '(' Exprs ')' ';'
   54     | T_Switch '(' Expr ')' '{' Cases DefaultStmt '}'
   55     | T_While '(' Expr ')' Stmt
   56     | T_For '(' OutExpr ';' Expr ';' OutExpr ')' Stmt
   57     | T_If '(' Expr ')' Stmt
   58     | T_If '(' Expr ')' Stmt T_Else Stmt

   59 Cases: Cases CaseStmt
   60      | CaseStmt

   61 CaseStmt: T_Case T_IntConstant ':' Stmts
   62         | T_Case T_IntConstant ':'

   63 DefaultStmt: T_Default ':' Stmts
   64            | T_Default ':'

   65 Exprs: Exprs ',' Expr
   66      | Expr

   67 OutExpr: Expr
   68        | /* empty */

   69 Expr: Constant
   70     | LValue
   71     | T_This
   72     | Call
   73     | '(' Expr ')'
   74     | LValue '=' Expr
   75     | Expr '+' Expr
   76     | Expr '-' Expr
   77     | Expr '*' Expr
   78     | Expr '/' Expr
   79     | Expr '%' Expr
   80     | '-' Expr
   81     | Expr '<' Expr
   82     | Expr '>' Expr
   83     | Expr T_LessEqual Expr
   84     | Expr T_GreaterEqual Expr
   85     | Expr T_Equal Expr
   86     | Expr T_NotEqual Expr
   87     | Expr T_Or Expr
   88     | Expr T_And Expr
   89     | '!' Expr
   90     | T_ReadInteger '(' ')'
   91     | T_ReadLine '(' ')'
   92     | T_New '(' T_Identifier ')'
   93     | T_NewArray '(' Expr ',' Type ')'
   94     | LValue T_Increm
   95     | LValue T_Decrem

   96 LValue: T_Identifier
   97       | Expr '.' T_Identifier
   98       | Expr '[' Expr ']'

   99 Call: T_Identifier '(' Actuals ')'
  100     | Expr '.' T_Identifier '(' Actuals ')'

  101 Actuals: Exprs
  102        | /* empty */

  103 Constant: T_IntConstant
  104         | T_DoubleConstant
  105         | T_BoolConstant
  106         | T_StringConstant
  107         | T_Null


Terminals, with rules where they appear

$end (0) 0
'!' (33) 89
'%' (37) 79
'&' (38)
'(' (40) 30 31 34 35 53 54 55 56 57 58 73 90 91 92 93 99 100
')' (41) 30 31 34 35 53 54 55 56 57 58 73 90 91 92 93 99 100
'*' (42) 77
'+' (43) 75
',' (44) 14 38 65 93
'-' (45) 76 80
'.' (46) 97 100
'/' (47) 78
':' (58) 61 62 63 64
';' (59) 22 34 35 48 50 51 52 53 56
'<' (60) 81
'=' (61) 74
'>' (62) 82
'[' (91) 98
']' (93) 98
'^' (94)
'{' (123) 8 9 20 21 40 41 42 43 54
'|' (124)
'}' (125) 8 9 20 21 40 41 42 43 54
error (256)
T_Void (258) 31 35
T_Bool (259) 26
T_Int (260) 24
T_Double (261) 25
T_String (262) 27
T_Class (263) 8 9
T_LessEqual (264) 83
T_GreaterEqual (265) 84
T_Equal (266) 85
T_NotEqual (267) 86
T_Dims (268) 29
T_And (269) 88
T_Or (270) 87
T_Null (271) 107
T_Extends (272) 10
T_This (273) 71
T_Interface (274) 20 21
T_Implements (275) 12
T_While (276) 55
T_For (277) 56
T_If (278) 57 58
T_Else (279) 58
T_Return (280) 51 52
T_Break (281) 50
T_New (282) 92
T_NewArray (283) 93
T_Print (284) 53
T_ReadInteger (285) 90
T_ReadLine (286) 91
T_Identifier (287) 8 9 10 14 15 20 21 23 28 30 31 34 35 92 96 97 99
    100
T_StringConstant (288) 106
T_IntConstant (289) 61 62 103
T_DoubleConstant (290) 104
T_BoolConstant (291) 105
T_Increm (292) 94
T_Decrem (293) 95
T_Switch (294) 54
T_Case (295) 61 62
T_Default (296) 63 64
P_Else (297)
P_Empty (298)
P_EmptyDefault (299)
P_NonEmpty (300)
P_NonEmptyDefault (301)


Nonterminals, with rules where they appear

$accept (69)
    on left: 0
Program (70)
    on left: 1, on right: 0
DeclList (71)
    on left: 2 3, on right: 1 2
Decl (72)
    on left: 4 5 6 7, on right: 2 3
ClassDecl (73)
    on left: 8 9, on right: 6
CExtend (74)
    on left: 10 11, on right: 8 9
CImplement (75)
    on left: 12 13, on right: 8 9
Implements (76)
    on left: 14 15, on right: 12 14
Field (77)
    on left: 16 17 18 19, on right: 8 16 17
InterDecl (78)
    on left: 20 21, on right: 7
VarDecl (79)
    on left: 22, on right: 4 16 18 44 45
Var (80)
    on left: 23, on right: 22 38 39
Type (81)
    on left: 24 25 26 27 28 29, on right: 23 29 30 34 93
FnDecl (82)
    on left: 30 31, on right: 5 17 19
Prototypes (83)
    on left: 32 33, on right: 20 32
Prototype (84)
    on left: 34 35, on right: 32 33
Formals (85)
    on left: 36 37, on right: 30 31 34 35
Vars (86)
    on left: 38 39, on right: 36 38
StmtBlock (87)
    on left: 40 41 42 43, on right: 30 31 49
VarDecls (88)
    on left: 44 45, on right: 40 41 44
Stmts (89)
    on left: 46 47, on right: 40 42 46 61 63
Stmt (90)
    on left: 48 49 50 51 52 53 54 55 56 57 58, on right: 46 47 55 56
    57 58
Cases (91)
    on left: 59 60, on right: 54 59
CaseStmt (92)
    on left: 61 62, on right: 59 60
DefaultStmt (93)
    on left: 63 64, on right: 54
Exprs (94)
    on left: 65 66, on right: 53 65 101
OutExpr (95)
    on left: 67 68, on right: 48 56
Expr (96)
    on left: 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86
    87 88 89 90 91 92 93 94 95, on right: 52 54 55 56 57 58 65 66 67
    73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 93 97 98 100
LValue (97)
    on left: 96 97 98, on right: 70 74 94 95
Call (98)
    on left: 99 100, on right: 72
Actuals (99)
    on left: 101 102, on right: 99 100
Constant (100)
    on left: 103 104 105 106 107, on right: 69


state 0

    0 $accept: . Program $end

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    Program    go to state 9
    DeclList   go to state 10
    Decl       go to state 11
    ClassDecl  go to state 12
    InterDecl  go to state 13
    VarDecl    go to state 14
    Var        go to state 15
    Type       go to state 16
    FnDecl     go to state 17


state 1

   31 FnDecl: T_Void . T_Identifier '(' Formals ')' StmtBlock

    T_Identifier  shift, and go to state 18


state 2

   26 Type: T_Bool .

    $default  reduce using rule 26 (Type)


state 3

   24 Type: T_Int .

    $default  reduce using rule 24 (Type)


state 4

   25 Type: T_Double .

    $default  reduce using rule 25 (Type)


state 5

   27 Type: T_String .

    $default  reduce using rule 27 (Type)


state 6

    8 ClassDecl: T_Class . T_Identifier CExtend CImplement '{' Field '}'
    9          | T_Class . T_Identifier CExtend CImplement '{' '}'

    T_Identifier  shift, and go to state 19


state 7

   20 InterDecl: T_Interface . T_Identifier '{' Prototypes '}'
   21          | T_Interface . T_Identifier '{' '}'

    T_Identifier  shift, and go to state 20


state 8

   28 Type: T_Identifier .

    $default  reduce using rule 28 (Type)


state 9

    0 $accept: Program . $end

    $end  shift, and go to state 21


state 10

    1 Program: DeclList .
    2 DeclList: DeclList . Decl

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 1 (Program)

    Decl       go to state 22
    ClassDecl  go to state 12
    InterDecl  go to state 13
    VarDecl    go to state 14
    Var        go to state 15
    Type       go to state 16
    FnDecl     go to state 17


state 11

    3 DeclList: Decl .

    $default  reduce using rule 3 (DeclList)


state 12

    6 Decl: ClassDecl .

    $default  reduce using rule 6 (Decl)


state 13

    7 Decl: InterDecl .

    $default  reduce using rule 7 (Decl)


state 14

    4 Decl: VarDecl .

    $default  reduce using rule 4 (Decl)


state 15

   22 VarDecl: Var . ';'

    ';'  shift, and go to state 23


state 16

   23 Var: Type . T_Identifier
   29 Type: Type . T_Dims
   30 FnDecl: Type . T_Identifier '(' Formals ')' StmtBlock

    T_Dims        shift, and go to state 24
    T_Identifier  shift, and go to state 25


state 17

    5 Decl: FnDecl .

    $default  reduce using rule 5 (Decl)


state 18

   31 FnDecl: T_Void T_Identifier . '(' Formals ')' StmtBlock

    '('  shift, and go to state 26


state 19

    8 ClassDecl: T_Class T_Identifier . CExtend CImplement '{' Field '}'
    9          | T_Class T_Identifier . CExtend CImplement '{' '}'

    T_Extends  shift, and go to state 27

    $default  reduce using rule 11 (CExtend)

    CExtend  go to state 28


state 20

   20 InterDecl: T_Interface T_Identifier . '{' Prototypes '}'
   21          | T_Interface T_Identifier . '{' '}'

    '{'  shift, and go to state 29


state 21

    0 $accept: Program $end .

    $default  accept


state 22

    2 DeclList: DeclList Decl .

    $default  reduce using rule 2 (DeclList)


state 23

   22 VarDecl: Var ';' .

    $default  reduce using rule 22 (VarDecl)


state 24

   29 Type: Type T_Dims .

    $default  reduce using rule 29 (Type)


state 25

   23 Var: Type T_Identifier .
   30 FnDecl: Type T_Identifier . '(' Formals ')' StmtBlock

    '('  shift, and go to state 30

    $default  reduce using rule 23 (Var)


state 26

   31 FnDecl: T_Void T_Identifier '(' . Formals ')' StmtBlock

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 37 (Formals)

    Var      go to state 31
    Type     go to state 32
    Formals  go to state 33
    Vars     go to state 34


state 27

   10 CExtend: T_Extends . T_Identifier

    T_Identifier  shift, and go to state 35


state 28

    8 ClassDecl: T_Class T_Identifier CExtend . CImplement '{' Field '}'
    9          | T_Class T_Identifier CExtend . CImplement '{' '}'

    T_Implements  shift, and go to state 36

    $default  reduce using rule 13 (CImplement)

    CImplement  go to state 37


state 29

   20 InterDecl: T_Interface T_Identifier '{' . Prototypes '}'
   21          | T_Interface T_Identifier '{' . '}'

    T_Void        shift, and go to state 38
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 39

    Type        go to state 40
    Prototypes  go to state 41
    Prototype   go to state 42


state 30

   30 FnDecl: Type T_Identifier '(' . Formals ')' StmtBlock

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 37 (Formals)

    Var      go to state 31
    Type     go to state 32
    Formals  go to state 43
    Vars     go to state 34


state 31

   39 Vars: Var .

    $default  reduce using rule 39 (Vars)


state 32

   23 Var: Type . T_Identifier
   29 Type: Type . T_Dims

    T_Dims        shift, and go to state 24
    T_Identifier  shift, and go to state 44


state 33

   31 FnDecl: T_Void T_Identifier '(' Formals . ')' StmtBlock

    ')'  shift, and go to state 45


state 34

   36 Formals: Vars .
   38 Vars: Vars . ',' Var

    ','  shift, and go to state 46

    $default  reduce using rule 36 (Formals)


state 35

   10 CExtend: T_Extends T_Identifier .

    $default  reduce using rule 10 (CExtend)


state 36

   12 CImplement: T_Implements . Implements

    T_Identifier  shift, and go to state 47

    Implements  go to state 48


state 37

    8 ClassDecl: T_Class T_Identifier CExtend CImplement . '{' Field '}'
    9          | T_Class T_Identifier CExtend CImplement . '{' '}'

    '{'  shift, and go to state 49


state 38

   35 Prototype: T_Void . T_Identifier '(' Formals ')' ';'

    T_Identifier  shift, and go to state 50


state 39

   21 InterDecl: T_Interface T_Identifier '{' '}' .

    $default  reduce using rule 21 (InterDecl)


state 40

   29 Type: Type . T_Dims
   34 Prototype: Type . T_Identifier '(' Formals ')' ';'

    T_Dims        shift, and go to state 24
    T_Identifier  shift, and go to state 51


state 41

   20 InterDecl: T_Interface T_Identifier '{' Prototypes . '}'
   32 Prototypes: Prototypes . Prototype

    T_Void        shift, and go to state 38
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 52

    Type       go to state 40
    Prototype  go to state 53


state 42

   33 Prototypes: Prototype .

    $default  reduce using rule 33 (Prototypes)


state 43

   30 FnDecl: Type T_Identifier '(' Formals . ')' StmtBlock

    ')'  shift, and go to state 54


state 44

   23 Var: Type T_Identifier .

    $default  reduce using rule 23 (Var)


state 45

   31 FnDecl: T_Void T_Identifier '(' Formals ')' . StmtBlock

    '{'  shift, and go to state 55

    StmtBlock  go to state 56


state 46

   38 Vars: Vars ',' . Var

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    Var   go to state 57
    Type  go to state 32


state 47

   15 Implements: T_Identifier .

    $default  reduce using rule 15 (Implements)


state 48

   12 CImplement: T_Implements Implements .
   14 Implements: Implements . ',' T_Identifier

    ','  shift, and go to state 58

    $default  reduce using rule 12 (CImplement)


state 49

    8 ClassDecl: T_Class T_Identifier CExtend CImplement '{' . Field '}'
    9          | T_Class T_Identifier CExtend CImplement '{' . '}'

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 59

    Field    go to state 60
    VarDecl  go to state 61
    Var      go to state 15
    Type     go to state 16
    FnDecl   go to state 62


state 50

   35 Prototype: T_Void T_Identifier . '(' Formals ')' ';'

    '('  shift, and go to state 63


state 51

   34 Prototype: Type T_Identifier . '(' Formals ')' ';'

    '('  shift, and go to state 64


state 52

   20 InterDecl: T_Interface T_Identifier '{' Prototypes '}' .

    $default  reduce using rule 20 (InterDecl)


state 53

   32 Prototypes: Prototypes Prototype .

    $default  reduce using rule 32 (Prototypes)


state 54

   30 FnDecl: Type T_Identifier '(' Formals ')' . StmtBlock

    '{'  shift, and go to state 55

    StmtBlock  go to state 65


state 55

   40 StmtBlock: '{' . VarDecls Stmts '}'
   41          | '{' . VarDecls '}'
   42          | '{' . Stmts '}'
   43          | '{' . '}'
